search by "*" + delete + insert + bug fixed

--- a/SQlDataConnection/SQLDataConnection.csproj
+++ b/SQlDataConnection/SQLDataConnection.csproj
@@ -144,5 +144,8 @@
   <ItemGroup>
     <Resource Include="Resources\close_button.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\background.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
